[tool.poetry]
name = "oop"
version = "0.1.0"
description = "Examples of actual Object Oriented Programming"
authors = ["Harold Cohen <me@harold-cohen.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.testing.dependencies]
pytest = "^8.2.0"


[tool.poetry.group.linting.dependencies]
pylint = "^3.1.0"
black = "^24.4.2"
pre-commit = "^3.7.1"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''

[tool.isort]
line_length = 120
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3
profile = "black"
